opensource/superset/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-service
  labels:
    app: superset
spec:
  selector:
    app: superset
  ports:
  - port: 8088
    targetPort: 8088
